<resources>
    <string name="app_name">RUPizza</string>
    <string name="welcome_to_ru_pizza">Welcome to RU Pizza!</string>
    <string name="please_select_an_option">Please Select An Option</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="specialty_pizzas_text">Specialty Pizzas</string>
    <string name="build_your_own_text">Build Your Own</string>
    <string name="shopping_cart_text">Shopping Cart</string>
    <string name="store_orders_text">Store Orders</string>
    <string name="custom_pizzas">Custom Pizzas</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="store_orders">Store Orders</string>
    <string name="username">Username:</string>
    <string name="deluxe_pizza">Deluxe Pizza</string>
    <string name="select_any_of_the_pizza_images_below">Select Any of the Pizza Images Below</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="quantity">Quantity</string>
    <string name="select_from_any_of_the_pizzas_below">Select From Any of the Pizzas Below</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="order_total">Order total:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="ordernumber">OrderNumber:</string>
    <string name="order_number">Order Number</string>
    <string name="select_size_prompt">Select Size</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="additional_toppings">Additional Toppings</string>
    <string name="total_price">Total price</string>
    <string name="add_to_order">Add To Order</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="alfredo_sauce">Alfredo Sauce</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="add_topping">Add Topping</string>
    <string name="remove_topping">Remove Topping</string>
    <string name="selected_toppings">Selected Toppings</string>
    <string name="price">Price</string>
    <string name="custom_pizza">Custom Pizza</string>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <array name="additional_toppings_array">
        <item>Sausage</item>
        <item>Chicken</item>
        <item>Beef</item>
    </array>

</resources>