<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_ru_pizza"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/please_select_an_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="194dp"
        android:layout_height="111dp"
        android:layout_marginTop="108dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/specialty_pizzas"
        android:cropToPadding="true"
        android:onClick="openSpecialties"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manypizzas" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="194dp"
        android:layout_height="111dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/custom_pizzas"
        android:cropToPadding="true"
        android:focusable="true"
        android:onClick="openCustoms"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/custompizza" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="194dp"
        android:layout_height="111dp"
        android:layout_marginTop="384dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/shopping_cart"
        android:cropToPadding="true"
        android:focusable="true"
        android:onClick="openCart"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoppingcart" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="194dp"
        android:layout_height="111dp"
        android:layout_marginTop="524dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/store_orders"
        android:cropToPadding="true"
        android:focusable="true"
        android:onClick="openOrders"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/storeicon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openSpecialties"
        android:text="@string/specialty_pizzas_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="292dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openCustoms"
        android:text="@string/build_your_own_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="432dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openCart"
        android:text="@string/shopping_cart_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="568dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openOrders"
        android:text="@string/store_orders_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>